Fixing font sizes on smaller screen sizes in autocomplete suggestions

--- a/style.css
+++ b/style.css
@@ -95,4 +95,14 @@ div {
     /* background-color: var(--grey); */
     border-radius: 25px;
   }
+
+  .pac-item {
+    font-size: 0.5rem;
+    padding: 5px 5px;
+  }
+
+  .pac-item-query {
+    font-size: 0.5rem;
+    padding-right: 7px;
+  }
 }
